--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	<title>Pacific Trails Resort</title>
 	<meta charset="utf-8">
-	<link rel "stylesheet" href="https://420n13la.github.io/ptrstepbystep-tristangiguere/pacific.css">
+	<link rel "stylesheet" href="pacific.css">
 	</head>
 
 	<body>
